[tool.poetry]
name = "stimulus"
version = "0.3.0"
description = "Experimental code generator for high-level interfaces of igraph"
authors = ["Gabor Csardi <csardi.gabor@gmail.com>", "Tamas Nepusz <ntamas@gmail.com>"]
packages = [
    { include = "stimulus", from = "src" }
]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
