[tool.poetry]
name = "stimulus"
version = "0.10.1"
description = "Experimental code generator for high-level interfaces of igraph"
authors = ["Gabor Csardi <csardi.gabor@gmail.com>", "Tamas Nepusz <ntamas@gmail.com>"]
packages = [
    { include = "stimulus", from = "src" }
]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
deepmerge = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stimulus = 'stimulus.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
