[project]
name = "stimulus"
version = "0.21.6"
description = "Experimental code generator for high-level interfaces of igraph"
authors = [
    { name = "Gabor Csardi", email = "csardi.gabor@gmail.com" },
    { name = "Tamas Nepusz", email = "ntamas@gmail.com" },
]
license = "GPL-2.0-or-later"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0",
  "deepmerge>=0.3.0",
  "jinja2>=3.1.2",
]

[project.scripts]
stimulus = 'stimulus.__main__:main'

[tool.hatch.build.targets.wheel]
packages = ["src/stimulus"]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
